# fedora-silverblue-pipeline

./: Jenkinsfile  Jenkinsfile.development  streams.groovy
cosa-rojig-repoize/: Cargo.toml  run.sh
cosa-rojig-repoize/src/: cosa-rojig-repoize.rs  cosa.rs
manifests/: pipeline.yaml
