[package]
name = "cosa-rojig-repoize"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
structopt = "0.2"
futures = { version = "0.3.1", features = ["compat"] }
futures-util = "0.3.1"
futures01 = { package = "futures", version = "0.1", optional = true }
bytes04 = { package = "bytes", version = "0.4.12" }
reqwest = { version = "0.10", features = ["json", "stream"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.78", features = ["derive"] }
serde_derive = "1.0.78"
serde_json = "1.0"
tempfile = "3.1.0"
rusoto_core = "0.42.0"
rusoto_s3 = "0.42.0"

[[bin]]
name = "cosa-rojig-repoize"
path = "src/cosa-rojig-repoize.rs"
